--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,69 +1,74 @@
 <!-- =================================================================================== -->
 <!-- Apartado filtros -->
 <!-- =================================================================================== -->
-<div class="max-w-[100rem] py-2 lg:py-0 mx-auto flex gap-2">
-  <mat-form-field class="w-[21rem]">
-    <mat-label>Filtro Empresas</mat-label>
-    <mat-select
-      [(value)]="selectedEmpresa"
-      (selectionChange)="emitirFiltros()"
-      panelClass="custom-panel"
-    >
-      <!-- Opción "Todas" con diseño mejorado -->
-      <mat-option value="">
-        <div
-          class="flex items-center gap-4 p-3 rounded-lg border-b border-gray-200 last:border-none hover:bg-gray-100 transition duration-300 ease-in-out"
-        >
-          <div class="flex flex-col flex-grow">
-            <span class="text-gray-600 text-sm leading-tight w-64">Todos</span>
-          </div>
-        </div>
-      </mat-option>
-
-      @for (item of DatosEmpresas; track $index) {
-      <mat-option [value]="item.rucempresa">
-        <div
-          class="flex items-center gap-4 p-3 rounded-lg border-b border-gray-200 last:border-none hover:bg-gray-100 transition duration-300 ease-in-out"
-        >
-          <div class="flex flex-col flex-grow">
-            <span class="text-indigo-500 font-semibold text-sm leading-tight">
-              {{ item.rucempresa || "Sin RUC" }}
-            </span>
-            <span class="text-gray-600 text-sm leading-tight truncate w-64">
-              {{ item.razonsocial || "Sin razón social" }}
-            </span>
-          </div>
-        </div>
-      </mat-option>
-      }
-    </mat-select>
-  </mat-form-field>
-
-  <mat-form-field>
-    <mat-label>Filtro Estados</mat-label>
-    <mat-select [(value)]="selected" (selectionChange)="emitirFiltros()">
-      @for (item of filtroEstados; track $index) {
-      <mat-option
-        class="text-indigo-500 font-semibold text-sm leading-tight"
-        [value]="item.value"
-        >{{ item.viewValue }}</mat-option
-      >
-      }
-    </mat-select>
-  </mat-form-field>
-
-  <mat-form-field class="w-[22rem] transition duration-300 ease-in-out">
-    <mat-icon matPrefix class="text-gray-500 transition duration-200">
-      search
-    </mat-icon>
+<div class="max-w-[100rem] mb-4 py-2 lg:py-0 mx-auto flex gap-2">
+  <div
+    class="bg-gray-100 border overflow-hidden w-full h-14 rounded-md flex items-center"
+  >
     <input
       matInput
+      #input
       (keyup)="applyFilter($event)"
       placeholder="Buscar"
-      #input
-      class="text-gray-800 placeholder-gray-400 focus:outline-none"
+      class="text-gray-800 w-full bg-transparent px-4 placeholder-gray-400 focus:outline-none"
     />
-  </mat-form-field>
+    <div class="w-72 flex items-start justify-start border-l-2">
+      <mat-form-field class="mt-4 w-64">
+        <mat-label>Empresas</mat-label>
+        <mat-select
+          [(value)]="selectedEmpresa"
+          (selectionChange)="emitirFiltros()"
+          panelClass="custom-panel"
+        >
+          <mat-option value="">
+            <div
+              class="flex items-center gap-4 p-3 rounded-lg border-b border-gray-200 last:border-none hover:bg-gray-100 transition duration-300 ease-in-out"
+            >
+              <div class="flex flex-col flex-grow">
+                <span class="text-gray-600 text-sm leading-tight w-64"
+                  >Todos</span
+                >
+              </div>
+            </div>
+          </mat-option>
+
+          @for (item of DatosEmpresas; track $index) {
+          <mat-option [value]="item.rucempresa">
+            <div
+              class="flex items-center gap-4 p-3 rounded-lg border-b border-gray-200 last:border-none hover:bg-gray-100 transition duration-300 ease-in-out"
+            >
+              <div class="flex flex-col flex-grow">
+                <span
+                  class="text-indigo-500 font-semibold text-sm leading-tight"
+                >
+                  {{ item.rucempresa || "Sin RUC" }}
+                </span>
+                <span class="text-gray-600 text-sm leading-tight truncate w-64">
+                  {{ item.razonsocial || "Sin razón social" }}
+                </span>
+              </div>
+            </div>
+          </mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="w-72 flex items-start justify-start border-l-2">
+      <mat-form-field class="mt-4 w-64">
+        <mat-label>Estados</mat-label>
+        <mat-select [(value)]="selected" (selectionChange)="emitirFiltros()">
+          @for (item of filtroEstados; track $index) {
+          <mat-option
+            class="text-indigo-500 font-semibold text-sm leading-tight"
+            [value]="item.value"
+            >{{ item.viewValue }}</mat-option
+          >
+          }
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
 </div>
 
 <section>
@@ -73,23 +78,47 @@
         <div class="p-1.5 min-w-full inline-block align-middle">
           <div class="bg-white border border-gray-200 rounded-xl shadow-md">
             <div class="overflow-hidden rounded-xl">
-              <table mat-table [dataSource]="dataSource" matSort class="min-w-full border border-gray-300 rounded-lg overflow-hidden">
-
+              <table
+                mat-table
+                [dataSource]="dataSource"
+                matSort
+                class="min-w-full border border-gray-300 rounded-lg overflow-hidden"
+              >
                 <!-- ======================= ENCABEZADOS ======================= -->
                 <ng-container matColumnDef="fechacreacion">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-left px-4 py-2 bg-gray-200 font-semibold text-gray-800">
+                  <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    mat-sort-header
+                    class="text-left px-4 py-2 bg-gray-200 font-semibold text-gray-800"
+                  >
                     Carga Inventario
                   </th>
-                  <td mat-cell *matCellDef="let row" class="px-4 py-2 border-b border-gray-200">
-                    <span class="text-sm text-gray-700">{{ row.fechacreacion | date : "dd/MM/yyyy" }}</span>
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="px-4 py-2 border-b border-gray-200"
+                  >
+                    <span class="text-sm text-gray-700">{{
+                      row.fechacreacion | date : "dd/MM/yyyy"
+                    }}</span>
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="descripcion">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-left px-4 py-2 bg-gray-200 font-semibold text-gray-800">
+                  <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    mat-sort-header
+                    class="text-left px-4 py-2 bg-gray-200 font-semibold text-gray-800"
+                  >
                     Descripción
                   </th>
-                  <td mat-cell *matCellDef="let row" class="px-4 py-2 border-b border-gray-200">
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="px-4 py-2 border-b border-gray-200"
+                  >
                     <span class="text-sm font-semibold text-gray-800">
                       {{ row.descripcion.toUpperCase() || "- sin nombre -" }}
                     </span>
@@ -97,10 +126,19 @@
                 </ng-container>
 
                 <ng-container matColumnDef="totalregistros">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-right px-4 py-2 bg-gray-200 font-semibold text-gray-800">
+                  <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    mat-sort-header
+                    class="text-right px-4 py-2 bg-gray-200 font-semibold text-gray-800"
+                  >
                     Total Ítems
                   </th>
-                  <td mat-cell *matCellDef="let row" class="px-4 py-2 text-right border-b border-gray-200">
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="px-4 py-2 text-right border-b border-gray-200"
+                  >
                     <span class="py-1 text-sm font-medium text-gray-700">
                       {{ row.totalregistros || "-" }}
                     </span>
@@ -108,62 +146,107 @@
                 </ng-container>
 
                 <ng-container matColumnDef="UsuarioAsignado">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-left px-4 py-2 bg-gray-200 font-semibold text-gray-800">
+                  <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    mat-sort-header
+                    class="text-left px-4 py-2 bg-gray-200 font-semibold text-gray-800"
+                  >
                     Usuario Asignado
                   </th>
-                  <td mat-cell *matCellDef="let row" class="px-4 py-2 border-b border-gray-200">
-                    <span class="text-sm text-gray-700">{{ row.UsuarioAsignado || "-" }}</span>
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="px-4 py-2 border-b border-gray-200"
+                  >
+                    <span class="text-sm text-gray-700">{{
+                      row.UsuarioAsignado || "-"
+                    }}</span>
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="estado">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center px-4 py-2 bg-gray-200 font-semibold text-gray-800">
+                  <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    mat-sort-header
+                    class="text-center px-4 py-2 bg-gray-200 font-semibold text-gray-800"
+                  >
                     Estado
                   </th>
-                  <td mat-cell *matCellDef="let row" class="px-4 py-2 text-center border-b border-gray-200">
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="px-4 py-2 text-center border-b border-gray-200"
+                  >
                     @if (row.estado == "1") {
-                      <td-estado-1 />
+                    <td-estado-1 />
                     } @if (row.estado == "2") {
-                      <td-estado-2 estado="'Inventariado'" />
+                    <td-estado-2 estado="'Inventariado'" />
                     } @if (row.estado == "0") {
-                      <td-estado-3 [estado]="'Anulado'" />
+                    <td-estado-3 [estado]="'Anulado'" />
                     }
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="operaciones">
-                  <th mat-header-cell *matHeaderCellDef class="text-center px-4 py-2 bg-gray-200 font-semibold text-gray-800">
+                  <th
+                    mat-header-cell
+                    *matHeaderCellDef
+                    class="text-center px-4 py-2 bg-gray-200 font-semibold text-gray-800"
+                  >
                     Operaciones
                   </th>
-                  <td mat-cell *matCellDef="let row" class="px-4 py-2 text-center border-b border-gray-200">
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    class="px-4 py-2 text-center border-b border-gray-200"
+                  >
                     <div class="flex justify-center gap-2">
                       <td-table-btn-detalle
                         [idcarga]="row.idcarga"
                         [rucempresa]="row.rucempresa"
-                        (obtenerDetalle)="ObtenerDetalleInventarios($event.rucempresa, $event.idcarga)"
+                        (obtenerDetalle)="
+                          ObtenerDetalleInventarios(
+                            $event.rucempresa,
+                            $event.idcarga
+                          )
+                        "
                       />
                       @if (row.estado == '1') {
-                        <button-asignar
-                          [idcarga]="row.idcarga"
-                          [rucempresa]="row.rucempresa"
-                          (obtenerDetalle)="ObtenerDetatosInventarios($event.rucempresa, $event.idcarga)"
-                        />
-                        <button-anular-inventario
-                          [idcarga]="row.idcarga"
-                          [rucempresa]="row.rucempresa"
-                          (obtenerDetalle)="ObtenerDatosAnularInventario($event.rucempresa, $event.idcarga)"
-                          [datosInventario]="datosInventario"
-                        />
+                      <button-asignar
+                        [idcarga]="row.idcarga"
+                        [rucempresa]="row.rucempresa"
+                        (obtenerDetalle)="
+                          ObtenerDetatosInventarios(
+                            $event.rucempresa,
+                            $event.idcarga
+                          )
+                        "
+                      />
+                      <button-anular-inventario
+                        [idcarga]="row.idcarga"
+                        [rucempresa]="row.rucempresa"
+                        (obtenerDetalle)="
+                          ObtenerDatosAnularInventario(
+                            $event.rucempresa,
+                            $event.idcarga
+                          )
+                        "
+                        [datosInventario]="datosInventario"
+                      />
                       }
                     </div>
                   </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns" class="hover:bg-gray-100 transition-all duration-150"></tr>
-
+                <tr
+                  mat-row
+                  *matRowDef="let row; columns: displayedColumns"
+                  class="hover:bg-gray-100 transition-all duration-150"
+                ></tr>
               </table>
-
             </div>
           </div>
         </div>
@@ -171,7 +254,6 @@
     </div>
   </div>
 </section>
-
 
 <!-- =================================================================================== -->
 <!-- DETALLE INVENTARIO -->
