--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
@@ -2,63 +2,33 @@
   width: 100vw;
 }
 
-.apartado-filtros {
-  display: flex;
-  gap: .6rem;
-}
-
-.apartado-filtros h1{
-  color: rgb(27, 27, 27);
-  font-weight: 500;
-  font-size: 1rem;
-  margin-bottom: 0;
-}
-
-.apartado-filtros p{
-  color: rgb(131, 131, 131);
-  font-weight: 300;
-  font-size: .8rem;
-  margin-bottom: 0;
-}
-
-.apartado-filtros hr{
-  margin: .8rem 0;
-}
-
-.apartado-filtros .opciones {
-  height: auto;
-  display: flex;
-  background-color: #e9e9e9;
-  border-radius: 10px;
-  padding: .1rem;
+.fondo {
+  background: #fff;
 }
 
 
 
 
-
-/* Estilos para el scrollbar en navegadores Webkit (Chrome, Edge, Safari) */
 .offcanvas-body::-webkit-scrollbar {
-  width: 8px; /* Ancho del scrollbar */
-  border-radius: 10px; /* Redondear scrollbar */
+  width: 8px;
+  border-radius: 10px;
 }
 
 .offcanvas-body::-webkit-scrollbar-track {
-  background: #e0e6ed; /* Color del fondo del scrollbar */
-  border-radius: 10px; /* Bordes redondeados */
+  background: #e0e6ed;
+  border-radius: 10px;
 }
 
 .offcanvas-body::-webkit-scrollbar-thumb {
-  background: #20477E; /* Color del thumb (barra desplazadora) */
-  border-radius: 10px; /* Bordes redondeados */
-  border: 2px solid #e0e6ed; /* Agrega un borde claro alrededor */
+  background: #20477E;
+  border-radius: 10px;
+  border: 2px solid #e0e6ed;
 }
 
 .offcanvas-body::-webkit-scrollbar-thumb:hover {
-  background: #16325A; /* Color al pasar el mouse */
+  background: #16325A;
 }
 
-/* Para Firefox */
 .offcanvas-body {
   scrollbar-width: thin;
   scrollbar-color: #20477E #e0e6ed;
@@ -75,7 +45,7 @@
 }
 .opciones {
   display: flex;
-  gap: 8px; /* Espaciado entre botones */
+  gap: 8px;
 }
 
 .opcion {
@@ -107,3 +77,30 @@
   font-size: 3rem;
 }
 
+
+.button-opcion {
+
+  padding: 2rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.button-opcion:hover {
+  cursor: pointer;
+  transform:  scale(1.03);
+  box-shadow: 0 12px 24px rgba(32, 71, 126, 0.3);
+}
+
+.button-opcion_vacias {
+  padding: 2rem  1.5rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
