--- a/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
@@ -1,5 +1,5 @@
 <!-- ========== START - HEADER ========== -->
-<header class="sticky h-[4rem] top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-[48] w-full bg-white border-b text-sm py-2.5 lg:ps-[260px] dark:bg-neutral-800 dark:border-neutral-700">
+<header class="sticky h-[4rem] top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-[48] w-full bg-white text-sm py-2.5 lg:ps-[260px] dark:bg-neutral-800 dark:border-neutral-700">
   <nav class="px-4 sm:px-6 flex basis-full items-center w-full mx-auto">
     <div class="me-5 lg:me-0 lg:hidden">
       <a class="flex-none rounded-md text-xl  no-underline font-semibold" aria-label="Preline">
@@ -20,7 +20,6 @@
       <div class="md:block">
         <div class="relative">
             <!-- REGISTRAR TIPO USUARIO -->
-
         </div>
       </div>
 
