--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -24,7 +24,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600">
             {{ row.codigoproducto }}
           </span>
         </button>
@@ -44,7 +44,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.codigobarra }}
           </span>
         </button>
@@ -66,7 +66,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.descripcionProducto }}
           </span>
         </button>
@@ -86,7 +86,7 @@
             'bg-slate-50e text-white': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.unidad }}
           </span>
         </button>
@@ -106,7 +106,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.stockL }}
           </span>
         </button>
@@ -126,7 +126,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.stockF }}
           </span>
         </button>
@@ -200,7 +200,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.almacen }}
           </span>
         </button>
@@ -220,7 +220,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.sucursal }}
           </span>
         </button>
@@ -240,7 +240,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.zona }}
           </span>
         </button>
@@ -260,7 +260,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.pasillo }}
           </span>
         </button>
@@ -280,7 +280,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.rack }}
           </span>
         </button>
@@ -300,7 +300,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600">
             {{ row.ubicacion }}
           </span>
         </button>
@@ -320,7 +320,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600 ">
             {{ row.esagrupado }}
           </span>
         </button>
@@ -340,7 +340,7 @@
             '': row.esnuevo == 1
           }"
         >
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
+          <span class="text-sm text-gray-600">
             {{ row.codigogrupo }}
           </span>
         </button>
