--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -1,6 +1,6 @@
 <!-- ========== START - HEADER ========== -->
 <header
-  class="sticky h-[4rem] top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-[48] w-full bg-white border-b text-sm py-2.5 lg:ps-[260px] dark:bg-neutral-800 dark:border-neutral-700"
+  class="sticky h-[4rem] top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-[48] w-full bg-white text-sm py-2.5 lg:ps-[260px] dark:bg-neutral-800 dark:border-neutral-700"
 >
   <nav class="px-4 sm:px-6 flex basis-full items-center w-full mx-auto">
     <div class="me-5 lg:me-0 lg:hidden">
@@ -73,7 +73,7 @@
                             class="fecharegistro px-1 py-3 flex gap-2 align-center"
                           >
                             <span
-                              class="text-sm text-gray-600 dark:text-neutral-400"
+                              class="text-sm text-gray-600 "
                             >
                               {{
                                 row.fechacreacion
@@ -97,7 +97,7 @@
                             class="fecharegistro px-1 py-3 flex gap-2 align-center"
                           >
                             <span
-                              class="text-sm text-gray-600 dark:text-neutral-400"
+                              class="text-sm text-gray-600 "
                             >
                               {{
                                 row.fechamodificacion
@@ -165,7 +165,7 @@
                           >
 
                             <span
-                              class="text-sm text-gray-600 dark:text-neutral-400"
+                              class="text-sm text-gray-600 "
                             >
                               {{ row.UsuarioAsignado.toUpperCase() }}
                             </span>
