--- a/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
+++ b/src/app/Ui/Shared/Components/organisms/menu-opciones/menu-opciones.component.html
@@ -91,11 +91,12 @@
   </div>
 </li>
 } }
-<ul>
-  <li id="menu-item" (click)="logout()">
+<ul class="ps-0  space-y-1">
+  <li id="menu-item-2" class="list-none">
     <a
-      class="flex no-underline items-center justify-start gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-700"
-    >
+      class="flex  focus:ring-0 no-underline items-center outline-none justify-start gap-x-3.5 py-1.5 px-2.5 text-sm text-gray-100 rounded-lg hover:bg-gray-800 focus:outline-none focus:bg-gray-800"
+      (click)="logout()">
+      <i class="uil uil-signout"></i>
       Salir
     </a>
   </li>
