--- a/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.css
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.css
@@ -1,6 +1,7 @@
 .bg-fondo-header {
-  background-image: url('../../../../../../../assets/images/bg_fondo.webp');
+  /* background-image: url('../../../../../../../assets/images/bg_fondo.webp'); */
   /* background-image: url("/db-inventory-gestor/browser/assets/images/bg_fondo.webp"); */
+  background-color: #fcfcfc;
   background-repeat: no-repeat;
   object-fit: contain;
   background-size: cover;
@@ -13,11 +14,11 @@
 
 
 form select {
-  height: 3.5rem;
+  height: 2.5rem;
   background-color: #f7f7f7;
   border: none;
 }
 
-input {
+/* input {
   height: 3.5rem;
-}
+} */
