--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -9,7 +9,7 @@
       matInput
       #input
       (keyup)="applyFilter($event)"
-      placeholder="Buscar"
+      placeholder="Buscar inventario"
       class="text-gray-800 w-full bg-transparent px-4 placeholder-gray-400 focus:outline-none"
     />
     <div class="w-72 flex items-start justify-start border-l-2">
@@ -76,7 +76,7 @@
     <div class="flex flex-col">
       <div class="-m-1.5 overflow-x-auto h-auto">
         <div class="p-1.5 min-w-full inline-block align-middle">
-          <div class="bg-white border border-gray-200 rounded-xl shadow-md">
+          <div class="bg-white border border-gray-200 rounded-xl">
             <div class="overflow-hidden rounded-xl">
               <table
                 mat-table
@@ -194,9 +194,7 @@
                     mat-header-cell
                     *matHeaderCellDef
                     class="text-center px-4 py-2 bg-gray-200 font-semibold text-gray-800"
-                  >
-                    Operaciones
-                  </th>
+                  ></th>
                   <td
                     mat-cell
                     *matCellDef="let row"
