--- a/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.css
+++ b/src/app/Ui/Modules/configuration/Empresas/page/registro-empresa/registro-empresa.component.css
@@ -1,6 +1,6 @@
 .bg-fondo-header {
-  background-image: url('../../../../../../../assets/images/bg_fondo.webp');
-  /* background-image: url("/db-inventory-gestor/browser/assets/images/bg_fondo.webp"); */
+  /* background-image: url('../../../../../../../assets/images/bg_fondo.webp'); */
+  background-image: url("/db-inventory-gestor/browser/assets/images/bg_fondo.webp");
   background-repeat: no-repeat;
   object-fit: contain;
   background-size: cover;
