--- a/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/page/tipo-usuario-page/tipo-usuario-page.component.html
@@ -37,7 +37,7 @@
             <div class="-m-1.5 overflow-x-auto">
               <div class="p-1.5 min-w-full inline-block align-middle">
                 <div
-                  class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
+                  class="bg-white border border-gray-200 rounded-xl overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
                 >
                 @if (DatosRoles()) {
                   <table-lista-tipo-usuario [DatosRoles]="DatosRoles()"/>
