--- a/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
@@ -9,13 +9,13 @@
   aria-hidden="true"
 >
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content flex">
       <div class="modal-header bg-fondo-header">
         <div
-          class="relative overflow-hidden min-h-[auto] text-left rounded-t-xl"
+          class="relative overflow-hidden min-h-[auto] text-center rounded-t-xl px-8"
         >
-          <h2 class="mt-8 text-2xl font-bold text-white">
-            Usu<span class="text-[#00D1AE]">arios</span>
+          <h2 class="text-2xl m-0 font-bold text-[#3b82f6]">
+            Usu<span class="text-[#3b82f6]">arios</span>
           </h2>
         </div>
         <button
@@ -26,162 +26,190 @@
           aria-label="Close"
         ></button>
       </div>
+
       <div class="modal-body">
         <form (ngSubmit)="guardarUsuario()" [formGroup]="formularioRegistro">
-          <div class="grid sm:grid-cols-12 gap-2 sm:gap-6">
-            <div class="sm:col-span-3">
-              <label
-                for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5"
-              >
-                Empresa
-              </label>
-            </div>
+          <!-- Section -->
+          <div
+            class="px-8 py-6 first:pt-0 last:pb-0 border-t first:border-transparent border-gray-200"
+          >
+            <label
+              for="af-payment-billing-contact"
+              class="inline-block text-sm font-medium mb-3"
+            >
+              Datos generales
+            </label>
 
-            <div class="sm:col-span-9">
-              <div class="sm:col-span-9">
-                <select
-                  id="empresas"
-                  formControlName="rucEmpresa"
-                  [(ngModel)]="usuario.rucempresa"
-                  class="form-select"
-                  aria-label="Default select example"
-                >
-                  <option value="" disabled selected>
-                    Seleccione una empresa
-                  </option>
-                  @for (item of DatosEmpresas; track $index) {
-                  <option [value]="item.rucempresa">
-                    {{ item.rucempresa }} - {{ item.razonsocial }}
-                  </option>
-                  }
-                </select>
-              </div>
-            </div>
-
-            <!-- End Col -->
-
-            <div class="sm:col-span-3">
-              <label
-                for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5"
-              >
-                Usuario
-              </label>
-            </div>
-            <!-- End Col -->
-
-            <div class="sm:col-span-9">
-              <input
-                [(ngModel)]="usuario.idusuario"
-                formControlName="idUsuario"
-                id="af-account-email"
-                type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                placeholder="Ingresar usuario"
-              />
-            </div>
-
-            <div class="sm:col-span-3">
-              <label
-                for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5"
-              >
-                Nombre Usuario
-              </label>
-            </div>
-            <!-- End Col -->
-
-            <div class="sm:col-span-9">
-              <input
-                [(ngModel)]="usuario.nombreusuario"
-                formControlName="nombreUsuario"
-                id="af-account-email"
-                type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                placeholder="Ingresar el nombre del usuario"
-              />
-            </div>
-            <!-- End Col -->
-
-            <div class="sm:col-span-3">
-              <div class="inline-block">
+            <div class="grid sm:grid-cols-12 gap-2 sm:gap-6">
+              <div class="sm:col-span-3">
                 <label
-                  for="af-account-phone"
+                  for="text-empresa"
                   class="inline-block text-sm text-gray-800 mt-2.5"
                 >
-                  Apellido
+                  Empresa
                 </label>
               </div>
-            </div>
-            <!-- End Col -->
 
-            <div class="sm:col-span-9">
-              <div class="sm:flex">
+              <div class="sm:col-span-9">
+                <div class="sm:col-span-9">
+                  <select
+                    id="text-empresa"
+                    formControlName="rucEmpresa"
+                    [(ngModel)]="usuario.rucempresa"
+                    class="form-select"
+                    aria-label="Default select example"
+                  >
+                    <option value="" disabled selected>
+                      Seleccione una empresa
+                    </option>
+                    @for (item of DatosEmpresas; track $index) {
+                    <option [value]="item.rucempresa">
+                      {{ item.rucempresa }} - {{ item.razonsocial }}
+                    </option>
+                    }
+                  </select>
+                </div>
+              </div>
+
+              <!-- End Col -->
+
+              <div class="sm:col-span-3">
+                <label
+                  for="text-nombre"
+                  class="inline-block text-sm text-gray-800 mt-2.5"
+                >
+                  Nombre
+                </label>
+              </div>
+              <!-- End Col -->
+
+              <div class="sm:col-span-9">
                 <input
-                  [(ngModel)]="usuario.apellido"
-                  formControlName="apellidoUsuario"
-                  id="af-account-phone"
+                  [(ngModel)]="usuario.nombreusuario"
+                  formControlName="nombreUsuario"
+                  id="text-nombre"
                   type="text"
-                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                  placeholder="Ingresa el apellido del usuario"
+                  class="bg-[#f7f7f7]  py-2 px-3 pe-11 block w-full border-gray-200 text-sm rounded-lg focus:outline-none disabled:opacity-50 disabled:pointer-events-none"
+                  placeholder="Ingresar un nombre"
                 />
               </div>
-            </div>
+              <!-- End Col -->
 
-            <div class="sm:col-span-3">
-              <label
-                for="rol"
-                class="inline-block text-sm text-gray-800 mt-2.5"
-              >
-                cargo
-              </label>
-            </div>
-            <!-- End Col -->
+              <div class="sm:col-span-3">
+                <div class="inline-block">
+                  <label
+                    for="af-account-phone"
+                    class="inline-block text-sm text-gray-800 mt-2.5"
+                  >
+                    Apellido
+                  </label>
+                </div>
+              </div>
+              <!-- End Col -->
 
-            <div class="sm:col-span-9">
-              <select
-                  id="rol"
+              <div class="sm:col-span-9">
+                <div class="sm:flex">
+                  <input
+                    [(ngModel)]="usuario.apellido"
+                    formControlName="apellidoUsuario"
+                    id="af-account-phone"
+                    type="text"
+                    class="bg-[#f7f7f7]  py-2 px-3 pe-11 block w-full border-gray-200 text-sm rounded-lg focus:outline-none disabled:opacity-50 disabled:pointer-events-none"
+                    placeholder="Ingresa un apellido"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Section -->
+
+          <div
+            class="px-8 py-6 first:pt-0 last:pb-0 border-t first:border-transparent border-gray-200"
+          >
+            <label
+              for="af-payment-billing-address"
+              class="inline-block text-sm font-medium mb-3"
+            >
+              Datos cuenta
+            </label>
+
+            <div class="grid sm:grid-cols-12 gap-2 sm:gap-6">
+              <div class="sm:col-span-3">
+                <label
+                  for="text-cargo"
+                  class="inline-block text-sm text-gray-800 mt-2.5"
+                >
+                  cargo
+                </label>
+              </div>
+              <!-- End Col -->
+
+              <div class="sm:col-span-9">
+                <select
+                  id="text-cargo"
                   formControlName="rolUsuario"
                   [(ngModel)]="usuario.cargo"
                   class="form-select"
                   aria-label="Default select example"
                 >
-                  <option value="" disabled selected>
-                    Seleccione una empresa
-                  </option>
+                  <option value="" disabled selected>Seleccione un rol</option>
                   @for (item of DatosRoles; track $index) {
                   <option [value]="item.rol">
                     {{ item.rol }}
                   </option>
                   }
                 </select>
-            </div>
+              </div>
 
-            <div class="sm:col-span-3">
-              <label
-                for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5"
-              >
-                contraseña
-              </label>
-            </div>
-            <!-- End Col -->
+              <!-- End Col -->
 
-            <div class="sm:col-span-9">
-              <input
-                [disabled]="!formularioRegistro.valid"
-                [(ngModel)]="usuario.contrasenia"
-                formControlName="contraseniaUsuario"
-                id="af-account-email"
-                type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                placeholder="Ingresar contraseña"
-              />
+              <div class="sm:col-span-3">
+                <label
+                  for="text-usuario"
+                  class="inline-block text-sm text-gray-800 mt-2.5"
+                >
+                  Usuario
+                </label>
+              </div>
+              <!-- End Col -->
+
+              <div class="sm:col-span-9">
+                <input
+                  [(ngModel)]="usuario.idusuario"
+                  formControlName="idUsuario"
+                  id="text-usuario"
+                  type="text"
+                  class="bg-[#f7f7f7]  py-2 px-3 pe-11 block w-full border-gray-200 text-sm rounded-lg focus:outline-none disabled:opacity-50 disabled:pointer-events-none"
+                  placeholder="Ingresar usuario"
+                />
+              </div>
+
+              <div class="sm:col-span-3">
+                <label
+                  for="text-contrasenia"
+                  class="inline-block text-sm text-gray-800 mt-2.5"
+                >
+                  contraseña
+                </label>
+              </div>
+              <!-- End Col -->
+
+              <div class="sm:col-span-9">
+                <input
+                  [disabled]="!formularioRegistro.valid"
+                  [(ngModel)]="usuario.contrasenia"
+                  formControlName="contraseniaUsuario"
+                  id="text-contrasenia"
+                  type="text"
+                  class="bg-[#f7f7f7]  py-2 px-3 pe-11 block w-full border-gray-200 text-sm rounded-lg focus:outline-none disabled:opacity-50 disabled:pointer-events-none"
+                  placeholder="Ingresar contraseña"
+                />
+              </div>
             </div>
           </div>
+          <!-- End Section -->
 
-          <div class="modal-footer mt-3">
+          <div class="modal-footer">
             <button
               (click)="cerrarRegistro()"
               type="button"
