--- a/src/app/Ui/Shared/Components/organisms/sidebar/sidebar.component.html
+++ b/src/app/Ui/Shared/Components/organisms/sidebar/sidebar.component.html
@@ -1,28 +1,82 @@
-
-<div id="hs-application-sidebar" class="bg-filtros-tabla-inventarios hs-overlay  [--auto-close:lg]
-  hs-overlay-open:translate-x-0
-  -translate-x-full transition-all duration-300 transform
-  w-[240px] h-full
-  hidden
-  fixed inset-y-0 start-0 z-[60]
-  bg-white border-e border-gray-200
-  lg:block lg:translate-x-0 lg:end-auto lg:bottom-0
-  dark:bg-neutral-800 dark:border-neutral-700" role="dialog" tabindex="-1" aria-label="Sidebar">
+<div
+  id="hs-application-sidebar"
+  class="bg-filtros-tabla-inventarios hs-overlay [--auto-close:lg] hs-overlay-open:translate-x-0 -translate-x-full transition-all duration-300 transform w-[240px] h-full hidden fixed inset-y-0 start-0 z-[60] bg-white border-e border-gray-200 lg:block lg:translate-x-0 lg:end-auto lg:bottom-0"
+  role="dialog"
+  tabindex="-1"
+  aria-label="Sidebar"
+>
   <div class="relative flex flex-col h-full max-h-full">
-    <div class="px-6 pt-4">
-      <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" [routerLink]="'/dashboard'" aria-label="Db Inventory">
-        <img src="../../../../../../../assets/svg/icon-logo-DbInventory.svg" alt="logo">
-        <!-- <img src="/db-inventory-gestor/browser/assets/svg/icon-logo-DbInventory.svg" alt="logo"> -->
+    <div class="px-2 pt-4">
+      <a
+        class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80"
+        [routerLink]="'/dashboard'"
+        aria-label="Db Inventory"
+      >
+        <svg
+          width="200"
+          height="100"
+          viewBox="0 0 160 100"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect width="100%" height="100%" fill="transparent" />
+
+          <!-- Texto "db" -->
+          <text
+            x="10"
+            y="40"
+            font-family="Arial, sans-serif"
+            font-size="35"
+            font-weight="bold"
+            fill="white"
+          >
+            db
+          </text>
+
+          <!-- Guion o subrayado turquesa -->
+          <rect x="60" y="35" width="35" height="8" fill="#00D4B1" />
+
+           <text
+            x="150"
+            y="40"
+            font-family="Arial, sans-serif"
+            font-size="15"
+            font-weight="bold"
+            fill="#00D4B1"
+          >
+            v1.3
+          </text>
+
+          <!-- Texto "Inventory" -->
+          <text
+            x="10"
+            y="70"
+            font-family="Arial, sans-serif"
+            font-size="35"
+            font-weight="bold"
+            fill="white"
+          >
+            Inventory
+          </text>
+        </svg>
       </a>
     </div>
 
-    <div class="h-full overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
-      <nav class="hs-accordion-group p-3 w-full flex flex-col flex-wrap" data-hs-accordion-always-open aria-label="nav">
-        <h4 class="flex justify-between items-center gap-x-3.5 py-2 px-2.5  text-sm text-[#00D1AE]  rounded-lg ">Menu <span>v 1.2</span></h4>
+    <div
+      class="h-full overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300"
+    >
+      <nav
+        class="hs-accordion-group p-3 w-full flex flex-col flex-wrap"
+        data-hs-accordion-always-open
+        aria-label="nav"
+      >
+        <h4
+          class="flex justify-between items-center gap-x-3.5 py-2 px-2.5 text-sm text-[#00D1AE] rounded-lg"
+        >
+          Menu
+        </h4>
         <ul class="flex flex-col space-y-1 pl-0">
           <menu-opciones />
         </ul>
-
       </nav>
     </div>
   </div>
