Style: Mejoramiendo de estilos

--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -150,6 +150,7 @@
                 <tr
                   mat-row
                   *matRowDef="let row; columns: displayedColumns"
+                  class="hover:bg-gray-100 transition-all duration-150"
                 ></tr>
               </table>
 
