--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/lista-inventarios-ajuste-page/lista-inventarios-ajuste-page.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/lista-inventarios-ajuste-page/lista-inventarios-ajuste-page.component.html
@@ -194,7 +194,7 @@
                       <ng-container matColumnDef="opciones">
                         <th mat-header-cell *matHeaderCellDef>Detalle</th>
                         <td mat-cell *matCellDef="let row">
-                          <div class="px-1 py-3">
+                          <div class="px-1">
                             <button
                               (click)="
                                 inventarioSeleccionadoPDF(
@@ -202,7 +202,7 @@
                                   row.idcarga
                                 )
                               "
-                              class="detalle btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
+                              class="detalle p-2 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
                               type="button"
                               data-bs-toggle="offcanvas"
                               data-bs-target="#disenoajustes"
@@ -223,6 +223,7 @@
                       <tr
                         mat-row
                         *matRowDef="let row; columns: displayedColumns"
+                        class="hover:bg-gray-100 transition-all duration-150"
                       ></tr>
                     </table>
 
