--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -78,6 +78,27 @@
         <div class="p-1.5 min-w-full inline-block align-middle">
           <div class="bg-white border border-gray-200 rounded-xl">
             <div class="overflow-hidden rounded-xl">
+              @if (isLoadingInventarios) {
+              <div class="flex animate-pulse">
+                <div class="shrink-0">
+                  <span class="size-12 block bg-gray-200 rounded-full"></span>
+                </div>
+
+                <div class="ms-4 mt-2 w-full">
+                  <p
+                    class="h-4 bg-gray-200 rounded-full"
+                    style="width: 40%"
+                  ></p>
+
+                  <ul class="mt-5 space-y-3">
+                    <li class="w-full h-4 bg-gray-200 rounded-full"></li>
+                    <li class="w-full h-4 bg-gray-200 rounded-full"></li>
+                    <li class="w-full h-4 bg-gray-200 rounded-full"></li>
+                    <li class="w-full h-4 bg-gray-200 rounded-full"></li>
+                  </ul>
+                </div>
+              </div>
+              }@else {
               <table
                 mat-table
                 [dataSource]="dataSource"
@@ -245,6 +266,7 @@
                   class="hover:bg-gray-100 transition-all duration-150"
                 ></tr>
               </table>
+              }
             </div>
           </div>
         </div>
