--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -74,7 +74,7 @@
                         </th>
                         <td mat-cell *matCellDef="let row">
                           <button
-                            class="fecharegistro px-1 py-3 flex gap-2 align-center"
+                            class="fecharegistro px-1 flex gap-2 align-center"
                           >
                             <span class="text-sm text-gray-600">
                               {{
@@ -96,7 +96,7 @@
                         </th>
                         <td mat-cell *matCellDef="let row">
                           <button
-                            class="fecharegistro px-1 py-3 flex gap-2 align-center"
+                            class="fecharegistro px-1 flex gap-2 align-center"
                           >
                             <span class="text-sm text-gray-600">
                               {{
@@ -119,7 +119,7 @@
                         </th>
                         <td mat-cell *matCellDef="let row">
                           <button
-                            class="px-6 py-3 flex gap-2 text-left"
+                            class="px-6  flex gap-2 text-left"
                             type="button"
                           >
                             <!-- data-bs-toggle="offcanvas" data-bs-target="#detalledashboard" aria-controls="staticBackdrop"-->
@@ -161,7 +161,7 @@
                         <td mat-cell *matCellDef="let row">
                           <button
                             class="usuariocreador"
-                            class="px-6 py-3 flex gap-2 align-center"
+                            class="px-6 flex gap-2 align-center"
                           >
                             <span class="text-sm text-gray-600">
                               {{ row.UsuarioAsignado.toUpperCase() }}
@@ -194,7 +194,7 @@
                       <ng-container matColumnDef="opciones">
                         <th mat-header-cell *matHeaderCellDef></th>
                         <td mat-cell *matCellDef="let row">
-                          <div class="px-1 py-3">
+                          <div class="px-1">
                             <button
                               (click)="
                                 inventarioSeleccionadoPDF(
@@ -202,7 +202,7 @@
                                   row.idcarga
                                 )
                               "
-                              class="detalle btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
+                              class="detalle p-2 inline-flex items-center justify-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
                               type="button"
                               data-bs-toggle="offcanvas"
                               data-bs-target="#disenoreporte"
@@ -224,6 +224,7 @@
                       <tr
                         mat-row
                         *matRowDef="let row; columns: displayedColumns"
+                        class="hover:bg-gray-100 transition-all duration-150"
                       ></tr>
                     </table>
 
