feacture(reportes [Editados manualmente]) Visualización correcta

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -132,7 +132,7 @@
         <button
           class="button-opcion"
           data-bs-toggle="offcanvas"
-          data-bs-target="#disenoreportedataAjuste"
+          data-bs-target="#disenoreportedata"
           aria-controls="offcanvasRight"
           (click)="ObtenerDetalleInventariosPDF(0, 2, 1, 0)"
         >
