--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -67,7 +67,7 @@
                     Seleccione una Usuario
                   </option>
                   @for (item of getUsuarios_All; track $index) { @if
-                  (item.estado == '1') {
+                  (item.estado === '1') {
                   <option [value]="item.idusuario">
                     {{ item.idusuario }} - {{ item.nombreusuario }}
                     {{ item.apellido }}
