--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -348,7 +348,7 @@
                 class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-auto"
               >
                 <div class="mat-elevation-z8 relative p-4">
-                  <filtros-checkbox-tabla
+                  <app-filtros-checkbox-tabla
                     class="filtros"
                     (columnasSeleccionadas)="
                       recibirColumnasSeleccionadas($event)
